--- a/Credit_Card_Page/styles/form.css
+++ b/Credit_Card_Page/styles/form.css
@@ -1,15 +1,17 @@
 /* Credit card */
 .credit_card {
     background-color: #9fcdcd;
+
     background-image: url("../images/moon_flag.png");
     background-repeat: no-repeat;
-    background-position: 50.6vh 15vh;
-    margin-top: 100px;
+    background-position: 148% 500%;
 
+    margin-top: 100px;
     padding: 40px 40px 100px;
-    border-radius: 15px;
     width: 750px;
     height: 400px;
+    border-radius: 15px;
+
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -18,12 +20,14 @@
     .card_heading {
         background-color: #db6424;
         color: white;
+
         font-size: 24px;
         font-weight: 500;
         padding: 20px;
-        border-radius: 15px;
-        width: 70%;
-        text-align: center;
+        
+        padding-left: calc(100% - 80%);
+        margin-left: -100px;
+        clip-path: polygon(3% 0%, 70% 0%, 67% 100%, 0% 100%);
     }
 
     /* Set flex column AND gap 20px for class CONTENT, where are labels and input fields */
@@ -35,15 +39,12 @@
     }
 }
 
-
 /* Set flex column AND gap for CLASSES */
 :is(.card_number_block, .card_name_block, .expiry_month, .cvv_cvn_block) {
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
-
-
 
 /* ADDITIONAL_INFO */
 /* Set width for class, where is Expiry AND cvv/cvn */
