--- a/Mini-Styles_Library/styles/index.css
+++ b/Mini-Styles_Library/styles/index.css
@@ -59,4 +59,11 @@ form {
 
 textarea {
   width: 30%;
+  padding: 7px 20px;
+  background-color: #FFFFFF;
+  border-color: #C5C5C5;
+  
+  &::placeholder {
+    color: #C5C5C5;
+  }
 }
