--- a/Mini-Styles_Library/styles/radio.css
+++ b/Mini-Styles_Library/styles/radio.css
@@ -1,9 +1,31 @@
 .person_state {
     display: flex;
+    align-items: center;
     gap: 10px;
+    
+    div {
+        display: flex;
+        align-items: center;
+        gap: 2px;
+    }
 }
 
-#male_id,
-#female_id {
-    border: 6px solid #3cb046;
+input[type="radio"]:checked {
+    background-color: #43ad4b;
+    border-color: #43ad4b;
+}
+
+input[type="radio"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    padding: 2px;
+    /* background-color only for content */
+    background-clip: content-box;
+    border: 2px solid #bbbbbb;
+    background-color: #e7e6e7;
+    border-radius: 50%;
 }
