--- a/Mini-Styles_Library/styles/checkboxes.css
+++ b/Mini-Styles_Library/styles/checkboxes.css
@@ -6,12 +6,12 @@
 :is(#like_toggle, #subscribe_toggle) {
     position: relative;
     display: inline-block;
-    width: 40px;
+    width: 39px;
     height: 20px;
     margin: 0;
     vertical-align: top;
     background: white;
-    border-radius: 7px;
+    border-radius: 5px;
     outline: none;
     cursor: pointer;
     -webkit-appearance: none;
@@ -24,20 +24,21 @@
 
     display: inline-block;
     position: absolute;
-    left: 2px;
-    top: 1.5px;
+    left: 1px;
+    top: 1px;
 
-    width: 17px;
-    height: 14px;
-    border-radius: 5px;
+    width: 20px;
+    height: 16px;
+    border-radius: 4px;
 
     transform: translateX(0);
     transition: all 0.3s ease-in-out;
 }
 
+/* Checked checkboxes */
 #like_toggle:checked::after,
 #subscribe_toggle:checked::after {
-    transform: translateX(100%);
+    transform: translateX(73%);
     background-color: #e54062;
     transition: all 0.3s ease-in-out;
 
