--- a/Mini-Styles_Library/styles/radio.css
+++ b/Mini-Styles_Library/styles/radio.css
@@ -20,12 +20,11 @@ input[type="radio"] {
     -moz-appearance: none;
     appearance: none;
     display: inline-block;
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
     padding: 2px;
     /* background-color only for content */
     background-clip: content-box;
-    border: 2px solid #bbbbbb;
-    background-color: #e7e6e7;
+    border: 2px solid #43ad4b;
     border-radius: 50%;
 }
