--- a/Mini-Styles_Library/styles/index.css
+++ b/Mini-Styles_Library/styles/index.css
@@ -58,12 +58,14 @@ form {
 }
 
 textarea {
-  width: 20%;
+  max-width: 300px;
+  height: 100px;
   padding: 7px 20px;
   background-color: #FFFFFF;
-  border-color: #C5C5C5;
+  border: 1px solid #C5C5C5;
+  border-radius: 5px;
   
   &::placeholder {
-    color: #C5C5C5;
+    color: #d2cfca;
   }
 }
