--- a/Personal_Data_Input/styles/blank.css
+++ b/Personal_Data_Input/styles/blank.css
@@ -13,7 +13,6 @@
     padding: 40px 35px;
 }
 
-
 /* Registration form */
 .registration_form {
     display: flex;
@@ -44,7 +43,6 @@
     }
 }
 
-
 /* Personal details */
 .personal_details {
     display: flex;
@@ -56,7 +54,7 @@
         display: flex;
         flex-direction: column;
         gap: 30px;
-        
+
         div {
             display: flex;
             flex-direction: column;
@@ -68,6 +66,15 @@
             }
         }
     }
+}
+
+.password_fields input {
+    height: 21.8px;
+}
+
+.fName_lName label,
+.state_date_block label {
+    height: 26px;
 }
 
 /* Additional options */
